fix: [CDS-52933]: Sticky Tab alignment during scrolling fixed for template details right drawer (#14102)

--- a/src/modules/72-templates-library/components/TemplateDetails/TemplateDetails.module.scss
+++ b/src/modules/72-templates-library/components/TemplateDetails/TemplateDetails.module.scss
@@ -70,6 +70,10 @@
         border-top: 1px solid var(--grey-200);
         position: sticky;
         top: 0;
+        // z-index is required here to ensure the list of tabs remain on top of the
+        // sibling elements during scrolling and the index value needs to be greater than 1
+        // as some eletments such as full screen buttons in the inputs have a z-index of 1
+        z-index: 2;
       }
     }
   }
